--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    {{>navebar}}
-    hyhy
+    <h1>
+        <a href="/">Home</a>
+    </h1>
+    <h1>
+        <a href="/login">Login</a>
+    </h1>
+    <h1>
+        <a href="/register">Register</a>
+    </h1>
 </body>
 </html>
